<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParrotCallConfirm</string>
    <string name="app_name_staging">staging-ParrotCallConfirm</string>

    <string name="call">CALL</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on" translatable="false">on</string>
    <string name="off" translatable="false">off</string>
    <string name="information">Information</string>
    <string name="action_settings">Settings</string>
    <string name="please_choose">Please Select</string>
    <string name="welcome_message"> ParrotCallConfirm shows confirm dialog before outgoing phone Call.</string>
    <string name="share">Share</string>
    <string name="share_text">http://play.google.com/store/apps/details?id=com.sakurafish.parrot.callconfirm</string>

    <string name="text_setting_description">You can change confirm sound!</string>
    <string name="text_information">Information</string>
    <string name="text_help">Help</string>
    <string name="text_google_play">Go to Google Play</string>
    <string name="text_credit">Credit</string>
    <string name="text_mail_to_dev">Mail to Developer</string>
    <string name="text_privacy_policy">Plivacy Policy</string>
    <string name="text_app_version" translatable="false">ver%1$s</string>

    <string name="setting_mail_to_dev2">[ParrotCallConfirm] Suggestions and Opinions</string>
    <string name="setting_mail_to_dev3">We do not sell or share your information with anyone else.\n SDK:%1$s Device:%2$s AppVer:%3$s\n----------------------\n</string>
    <string name="setting_confirm">Enable Call Confirm</string>
    <string name="setting_notification">Enable Notification</string>
    <string name="setting_vibrate_title">Vibration</string>
    <string name="setting_vibrate">Enable Vibrate</string>
    <string name="setting_vibrate_select">Select Vibration Pattern</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_sound_on_title">Sound On</string>
    <string name="setting_sound1">Select Sound</string>
    <string name="setting_sound2">Sound volume</string>
    <string name="setting_sound_play_switch">
When you Click these line, you can hear the sound. If you turn this switch off, it will not play.</string>
    <string name="setting_alpha_test">Alpha Test</string>
    <string name="setting_headset_mode">Bluetooth Headset Mode</string>
    <string name="setting_headset_mode_summary">Disable for Bluetooth headset.
Since the operation is being verified, there is a possibility of trouble.</string>

    <string name="message_info1">You are making a phone call…</string>
    <string name="message_info2">Confirm</string>
    <string name="message_confirm1">Call Confirm</string>
    <string name="message_number">Number:</string>
    <string name="message_telephone_canceled">Telephone canceled</string>
    <string name="message_name_placeholder">Unknown</string>
    <string name="message_request_permissions1">Permissions</string>
    <string name="message_request_permissions2">
This application needs permissions to catch phone calls, display contacts and make outgoing calls. Please allow all permissions.</string>
    <string name="message_request_permissions3">
This application is not working correctly without permissions. Please make switch on from the apps Settings.</string>

    <!-- Notification -->
    <string name="notification_title">Information</string>
    <string name="notification_channel_name">ParrotCallConfirm Normal Notification</string>
    <string name="notification_channel_description">Show information from app.</string>

    <!-- error -->
    <string name="error">error</string>
    <string name="error_cannot_get_phonenumber">Could not retrieve the phone number. Since Parrot Call Confirm App can not make a call from this model, we will disable the application. Sorry for the inconvenience.</string>

    <string name="error_now_disabled">! Call Confirm dialog is not working now !</string>
    <string name="error_not_activated">This app is not activated.</string>
    <string name="error_no_permission_call">Phone permission is not permitted.</string>
    <string name="error_no_permission_call_log">Call log permission is not permitted.</string>
    <string name="error_alert_refresh">\nTouch here and refresh status</string>
</resources>
