<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Sound play on/off -->
        <LinearLayout
            android:id="@+id/play_sound_switch_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/primary_light"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_medium"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/margin_medium">

            <Switch
                android:id="@+id/play_sound_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_sound_play_switch"
                android:textColor="@color/primary_text"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:textSize="@dimen/font_small" />
        </LinearLayout>

        <!-- Sound list -->
        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/play_sound_switch_area"
            android:layout_centerHorizontal="true"
            android:choiceMode="singleChoice" />

    </RelativeLayout>
</layout>